<resources>
    <!-- App -->
    <string name="app_name">BikeShare</string>

    <!-- bike_info -->
    <string name="label_bike_name">"Bike: "</string>
    <string name="label_location">"Location: "</string>
    <string name="label_select">Select bike</string>
    <string name="label_time_start">"Ride started: "</string>
    <string name="label_history">History</string>
    <string name="label_active_ride">!Currently Riding!</string>
    <string name="label_location_end">End location*</string>
    <string name="label_ride_information">Ride information</string>
    <string name="label_available">"Available: "</string>
    <string name="label_bike_id">"ID: "</string>
    <string name="label_bike_price">"Price/hour: "</string>
    <string name="label_bike_list">Select a bike</string>
    <string name="label_bike_photo">"Bike photo "</string>


    <string name="btn_start_ride">Start Ride!</string>
    <string name="btn_end_ride">End Ride</string>
    <string name="btn_history_ride">Ride History</string>
    <string name="btn_new_ride">Select bike</string>
    <string name="btn_add_new_bike">Create new bike</string>
    <string name="btn_edit_bike">Edit</string>
    <string name="btn_wallet">Wallet</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit">Edit</string>

    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="hint_bike_name">Bike name</string>
    <string name="hint_bike_location">Bike location</string>
    <string name="hint_end_ride">"Type your end-location here…"</string>
    <string name="hint_bike_price">"Price pr. hour..."</string>
    <string name="description_end_ride">To end your ride, you have to type in your end-location in the field below and
        press the \'End ride\' button
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
