<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" >

    <TextView
            android:text="@string/label_select"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_select"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">

        <Spinner
                android:id="@+id/spinner_bike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                style="@style/ThemeOverlay.AppCompat.Light"
        />

        <Button
                android:text="@string/btn_edit_bike"
                android:textSize="12sp"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="wrap_content" android:id="@+id/btn_edit_bike"/>
        <Button
                android:text="@string/btn_add_new_bike"
                android:textSize="12sp"
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="wrap_content" android:id="@+id/btn_add_new_bike"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/label_bike_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bike_name"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/label_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/bike_location"/>

        </LinearLayout>

    </LinearLayout>

    <Button
            android:text="@string/btn_start_ride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimaryDark" android:id="@+id/btn_start_ride"/>

</LinearLayout>