<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
            android:layout_width="match_parent"
            tools:ignore="ContentDescription"
            android:layout_height="276dp"
            android:layout_marginTop="-2dp"
            app:srcCompat="@mipmap/bikelogo" android:id="@+id/imageView"/>
    <TextView
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp" android:id="@+id/textView"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:weightSum="1"
    >
        <Button
                android:text="@string/btn_new_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryLight"
                android:id="@+id/btn_new_ride"/>

        <Button
                android:text="@string/btn_history_ride"
                android:layout_width="match_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/colorPrimaryLight"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content" android:id="@+id/btn_history_ride"/>

        <Button
                android:text="@string/btn_wallet"
                android:layout_width="match_parent"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/colorPrimaryLight"
                android:layout_height="wrap_content" android:id="@+id/btn_wallet"/>
    </LinearLayout>

</LinearLayout>