<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="180dp"
                    android:layout_height="220dp"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    android:cropToPadding="true"
                    android:layout_margin="10dp"
                    android:background="@color/colorBackground"
                    android:id="@+id/bike_photo"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-10dp"
                    android:text="@string/label_bike_photo"/>

        </LinearLayout>

        <ImageButton
                android:src="@android:drawable/ic_menu_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimaryLight"
                android:id="@+id/btn_camera"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/label_bike_name"/>

            <EditText
                    android:id="@+id/bike_name"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="54dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/hint_bike_name" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/label_location"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal">

            <EditText
                    android:id="@+id/bike_location"
                    android:inputType="textNoSuggestions"
                    android:layout_width="0dp"
                    android:layout_weight=".99"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/hint_bike_location"/>

            <ImageButton
                    android:src="@android:drawable/ic_menu_mylocation"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryLight"
                    android:id="@+id/btn_gps"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="18sp"
                    android:text="@string/label_bike_price"/>

            <EditText
                    android:id="@+id/bike_price"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/hint_bike_price"/>
        </LinearLayout>
    </LinearLayout>

    <Button
            android:text="@string/btn_add_new_bike"
            android:layout_width="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimaryLight"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content" android:id="@+id/btn_add_new_bike"/>
</LinearLayout>