<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
                android:id="@+id/bike_name"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/hint_bike_name" />
        <EditText
                android:id="@+id/bike_location"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_bike_location"/>
        <EditText
                android:id="@+id/bike_price"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_bike_price"/>

    </LinearLayout>

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:scaleType="center"
            android:cropToPadding="true"
            android:background="@color/colorBackground"
            android:id="@+id/bike_photo"/>

    <ImageButton
            android:src="@android:drawable/ic_menu_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_camera"/>

    <Button
            android:text="@string/btn_add_new_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_add_new_bike"/>
</LinearLayout>