<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="180dp"
                android:layout_height="220dp"
                android:scaleType="center"
                android:cropToPadding="true"
                android:layout_marginRight="10dp"
                android:background="@color/colorBackground"
                android:id="@+id/bike_photo"/>

        <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:text="@string/label_bike_id"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/bike_id"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:text="@string/label_bike_name"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/bike_name"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:text="@string/label_available"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/bike_available"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:text="@string/label_bike_price"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/bike_price"/>

            </LinearLayout>

                <TextView
                        android:text="@string/label_location"
                        android:textStyle="bold"
                        android:textSize="16sp"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/bike_location"/>
        </LinearLayout>
    </LinearLayout>

    <Button
            android:text="@string/btn_start_ride"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimaryLight" android:id="@+id/btn_start_ride"/>
</LinearLayout>