<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="180dp"
                android:layout_height="220dp"
                android:scaleType="center"
                android:cropToPadding="true"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="12dp"
                android:background="@color/colorBackground"
                android:id="@+id/bike_photo"/>

        <ImageButton
                android:src="@android:drawable/ic_menu_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:id="@+id/btn_camera"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:text="@string/label_bike_id"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <TextView
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"
                android:hint=" Hello world"
                android:layout_height="wrap_content" android:id="@+id/bike_id"/>

        <TextView
                android:text="@string/label_bike_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <EditText
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"
                android:hint="Hello world!"
                android:layout_height="wrap_content" android:id="@+id/bike_name"/>

        <TextView
                android:text="@string/label_available"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>


        <EditText
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:inputType="textShortMessage"
                android:hint="Hello world!"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content" android:id="@+id/bike_available"/>

        <TextView
                android:text="@string/label_bike_price"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <EditText
                android:layout_width="match_parent"
                android:hint="hello world"
                android:inputType="number"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content" android:id="@+id/bike_price"/>

        <TextView
                android:text="@string/label_location"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        <EditText
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:hint="Hello wold!"
                android:layout_marginBottom="28dp"
                android:layout_height="wrap_content" android:id="@+id/bike_location"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
    >
        <Button
                android:text="@string/btn_delete"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:background="@color/colorUnavailable"
                android:id="@+id/btn_delete"
                android:layout_width="100dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"/>

        <Button
                android:text="@string/btn_save"
                android:textAllCaps="true"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/colorSecondary"
                android:id="@+id/btn_save"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>