<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/label_bike_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/bike_name"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/label_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/bike_location"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/label_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/bike_available"/>
    </LinearLayout>


    <ImageButton
            android:src="@android:drawable/ic_menu_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_camera"/>

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="center"
            android:cropToPadding="true"
            android:background="@color/colorBackground" android:id="@+id/bike_photo"/>
</LinearLayout>